fixed flex-wrap in fade style

--- a/src/templates/items-list/items-style/fade/style.scss
+++ b/src/templates/items-list/items-style/fade/style.scss
@@ -27,7 +27,6 @@
         position: relative;
         display: flex;
         flex-direction: column;
-        flex-wrap: nowrap;
         align-items: center;
         justify-content: center;
         width: 100%;
